--- a/Full-Stack Engineer/.vscode/settings.json
+++ b/Full-Stack Engineer/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/Fundamentals of HTML/1_Elements_and_Structure/2.13_html_tags.html"
+    "livePreview.defaultPreviewPath": "/cheatsheet.html"
 }
